--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,7 +19,10 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/DefaultMap.DefaultMap
-GameDefaultMap=/Game/DefaultMap.DefaultMap
-ServerDefaultMap=/Game/DefaultMap.DefaultMap
+EditorStartupMap=/Game/Maps/MainGame.MainGame
+GameDefaultMap=/Game/Maps/MainGame.MainGame
+ServerDefaultMap=/Game/Maps/MainGame.MainGame
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.MotionBlur=False
 
